samples/_failures_safe/1761632892_76f7a6_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_710ee5ab.c: In function ‘main’:
./samples/SAFE/__tmp_710ee5ab.c:162:5: error: expected expression at end of input
  162 |     if (
      |     ^~
./samples/SAFE/__tmp_710ee5ab.c:162:5: error: expected declaration or statement at end of input
